# arrayref-sgx

./: Cargo.toml
sgx/arrayref-sgx-test/enclave/: Cargo.toml
sgx/arrayref-sgx-test/enclave/src/: arrayref_tests.rs  lib.rs
src/: lib.rs
