[package]
name = "arrayref"
version = "0.3.6"
authors = ["David Roundy <roundyd@physics.oregonstate.edu>"]
description = "Macros to take array references of slices"
license = "BSD-2-Clause"
repository = "https://github.com/droundy/arrayref"
documentation = "https://docs.rs/arrayref"

[dependencies]
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

[dev-dependencies]
quickcheck = "0.6"
